2008-05-03  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/glwidget.cpp: Only switch to quickRender on mouse
	move, not press.

	* libavogadro/src/tools/aligntool.*: Used guarded pointers (QPointer)
	to make the align tool much harder to crash.

2008-05-02  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/orbitaldialog.*,
	libavogadro/src/extensions/orbitalextension.*: Adding some extra
	detail on the cube parameters along with the ability to modify this.
	Also added a little extra debug output while support if improved.

2008-04-30  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.*: Added several new
	options and modifications based upon discussion in bug 1954113.
	Editing of the text edit box still needs to be added.

	* avogadro/src/mainwindow.cpp, avogadro/src/mainwindow.ui: Updated
	with new view menu actions for axes and debug information.

	* libavogadro/src/glwidget.cpp: Update the display after axes or debug
	rendering is turned on or off.

2008-04-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	*  libavogadro/src/tools/align.png,
	libavogadro/src/tools/aligntool.cpp,
	libavogadro/src/tools/aligntool.qrc: New icon for align tool.

	* avogadro/src/mainwindow.cpp: Fix up Mac/Windows save dialogs.
	Also disable save/revert menu actions until the document is modified.

	* avogadro/src/savedialog.cpp: Remove incorrect #ifdef for setting
	filters on Mac. Now done in mainwindow.cpp. Use static QFileDialog
	on Windows (and Mac).

2008-04-29  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/extensions/gaussianinputdialog.cpp: Several fixes
	suggested by Michael Banck in bugs 1954108, 1954101 and 1954099.

2008-04-28  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/orbitalsettingswidget.ui: Only recalculate the
	isosurface when editing is finished, minimum spinner value of zero.
